# CGAL-skeletonization

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CGAL-5.0/Surface_mesh_skeletonization/: CMakeLists.txt  MCF_Skeleton_sm_example.cpp
data/: suzan.mtl
data/Mesh/mesh_tests/: 13_octopus.off  1441_Sketched-Brunnen.off  189_filigree-low.off  chair.off  knot108s.off  multiple_objects.off
data/Mesh/primitif/: cone.off  cube.off  cylindre.off  double-torus.off  etoile.off  pave.off  plateau.off  sphere.off  sphere_V2.off  tore.off
include/: CMakeCache.txt  Makefile  Visualizer.h  cmake_install.cmake  sqcheck  util.hpp
skgen/: CMakeLists.txt
skgen/CGAL_skeletonization/: CMakeLists.txt
skgen/CGAL_skeletonization/detail_MCF_Skeleton/: CMakeLists.txt  main.cpp
skgen/CGAL_skeletonization/direct_MCF_Skeleton/: CMakeLists.txt  main.cpp
skgen/Surface_mesh_skeletonization/: CMakeLists.txt
skgen/include/: MeshViewer.hpp  SimpleCommandLine.h  Skeleton.hpp  SkeletonManager.hpp  Viewer.h  util.hpp
skgen/src/: MeshViewer.cpp  Skeleton.cpp  SkeletonManager.cpp  Viewer.cpp  main.cpp
src/: main.cpp
tests/: CMakeLists.txt  Table_de_verites_epaisseur.ods
tests/Assets/: cube.stl  cube_false_skl.stl
